# cmake-build

./: .bumpversion.cfg  .coveragerc  .envrc  .gitignore  .repos  CHANGELOG.rst  MANIFEST.in  README.rst  cmake_build.yaml  cmake_presets.rst  invoke.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
behave4cmake_build/: cmake_build_steps.py  cmake_build_util.py  cmake_project_steps.py  fixtures.py  workdir_setup_steps.py
cmake_build/: __main__.py  cmake.py  cmake_util.py  command.py  config.py  exceptions.py  host_platform.py  model.py  model_builder.py  pathutil.py  persist.py  program.py  tasks.py  version.py
cmake_build/invoke_tasklet/: __init__.py  cmake.py
cmake_build/tasklet/: cleanup.py
examples/: Makefile  README.rst  cmake-build.config.yaml  cmake_build.yaml
examples/cmake/: cxx.setup_cxx_standard.cmake  project.build_config.cmake  project.setup_cxx.cmake
examples/cmake/.attic/: project.build_config.cmake
examples/cmake/toolchain.optional/: ccache.cmake
examples/library_hello/: CMakeLists.txt  README.rst
examples/library_hello/src/hello/: Responder.cpp  Responder.hpp
examples/library_hello/src/util/: NonCopyable.hpp  StringUtil.hpp
examples/library_hello/test/hello/: test_Responder.cpp
examples/program_hello/: CMakeLists.txt  README.rst  hello_main.cpp
features/: cmake_build.any.nonexisting_directory_syndrome.feature  cmake_build.any.with_cmake_project.feature  cmake_build.any.without_cmake_project_syndrome.feature  cmake_build.build.feature  cmake_build.build_config.all.feature  cmake_build.build_config.discover4host_platform.macOS.feature  cmake_build.build_config.feature  cmake_build.build_config.specify_default.feature  cmake_build.clean.feature  cmake_build.cleanup.feature  cmake_build.config.build_dir_schema.feature  cmake_build.config.cmake_generator.feature  cmake_build.config.use_other_configfile.feature  cmake_build.discover_build_config4host_platform.linux.feature  cmake_build.discover_build_config4host_platform.macOS.feature  cmake_build.discover_build_config4host_platform.windows.feature  cmake_build.generator.ninja_multi.feature  cmake_build.init.feature  cmake_build.install.feature  cmake_build.many_tasks.remember_settings.feature  cmake_build.pack.feature  cmake_build.reinit.feature  cmake_build.run_as_python_module.feature  cmake_build.use_cmake_config.with_multi_config_generator.feature  cmake_build.without_configfile.feature  cmake_build.without_configfile.inherit_configfile.feature  environment.py
features/steps/: use_steplib_behave4cmake_build.py  use_steplib_behave4cmd.py
json.schema/: README.rst
lib/python/behave4cmd0/: __setup.py  command_steps.py
py.requirements/: README.txt  basic.txt  ci.tox.txt  develop.txt  docs.txt  optional_cmake.txt  testing.txt
tasks/: __init__.py  _tasklet_cleanup.py  cmake.py  docs.py  py.requirements.txt  test.py
tests/unit/: test_cmake_util.py  test_config.py  test_model.py  test_model_project_cmake_cmdline.py  test_model_runner_cmake_cmdline.py
tests/unit/cleanup/: test_path_syndrome.py
